Test/typing/should_fail/custom_constructor_no_default.java
class A {

    private int j;

    A(int i) {
        j = i;
    }

    static void main (String[] args) {
        A a = new A();
    }
}